[package]
name = "stdin2file"
version = "1.2.0"
authors = ["hugru"]
edition = "2018"

[dependencies]
clap = "3.0.1"
log = "0.4.14"
env_logger = "0.10.0"
chrono = "0.4.19"
xz2 = { version = "0.1.6", features = ["tokio"] }
anyhow = "1.0.52"
assert_cmd = "2.0.2"
predicates = "2.1.0"
tokio = { version = "1.15.0", features = ["full"] }
lexical-sort = "0.3.1"
rand = "0.8.4"
flate2 = "1.0.22"

[dev-dependencies]
serial_test = "0.5.1"
