[package]
name = "stdin2file"
version = "1.2.0"
authors = ["hugru"]
edition = "2018"

[dependencies]
clap = "3.2.23"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
xz2 = { version = "0.1.7", features = ["tokio"] }
anyhow = "1.0.66"
assert_cmd = "2.0.6"
predicates = "2.1.3"
tokio = { version = "1.22.0", features = ["full"] }
lexical-sort = "0.3.1"
rand = "0.8.5"
flate2 = "1.0.25"
escargot = "0.5.8"

[dev-dependencies]
serial_test = "0.9.0"
